AC_PREREQ(2.61)
AC_INIT(c-template, 0.1, info@example.com)
AM_INIT_AUTOMAKE(c-template, 0.1)
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile src/Makefile)
