AC_PREREQ([2.69])
AC_INIT([finch], [0.1], [info@example.com])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/parser.y])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_LEX
AC_PROG_YACC
AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 common/Makefile
                 src/Makefile])
AC_OUTPUT
